--- a/src/app/views/pages/servicos/servicos.component.html
+++ b/src/app/views/pages/servicos/servicos.component.html
@@ -1,5 +1,5 @@
 <vex-page-layout mode="card">
-    <vex-page-layout-header fxLayout="column" fxLayoutAlign="right start">
+    <vex-page-layout-header fxLayout="column" fxLayoutAlign="right center">
         <div vexContainer>
             <h2 class="title m-0">{{ legenda }}</h2>
         </div>
