adicionada coluna de produtos

--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
@@ -103,30 +103,49 @@
                 </div>
               </div>
 
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg" alt="calvao csv" width="80px" height="80px">
-                </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Corte Simples</span>
-                    <span>R$ 30,00</span>
-                </div>
-              </div>
-
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg" alt="calvao csv" width="80px" height="80px">
-                </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Corte Simples</span>
-                    <span>R$ 30,00</span>
-                </div>
-              </div>
-
             </div>
 
-            <div class="produtos" *ngIf="favoriteSeason === 'Produtos'">
-                produtos
+            <div class="servicos" *ngIf="favoriteSeason === 'Produtos'">
+              <div class="servico-coluna">
+                <div>
+                  <img src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp" alt="calvao csv" width="80px" height="80px">
+                </div>
+                <div style="display: flex; flex-direction: column; margin-left: 5px;">
+                    <span>Minoxidil</span>
+                    <span>R$ 180,00</span>
+                </div>
+              </div>
+
+              <div class="servico-coluna">
+                <div>
+                  <img src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp" alt="calvao csv" width="80px" height="80px">
+                </div>
+                <div style="display: flex; flex-direction: column; margin-left: 5px;">
+                    <span>Minoxidil</span>
+                    <span>R$ 180,00</span>
+                </div>
+              </div>
+
+              <div class="servico-coluna">
+                <div>
+                  <img src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp" alt="calvao csv" width="80px" height="80px">
+                </div>
+                <div style="display: flex; flex-direction: column; margin-left: 5px;">
+                    <span>Minoxidil</span>
+                    <span>R$ 180,00</span>
+                </div>
+              </div>
+
+              <div class="servico-coluna">
+                <div>
+                  <img src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp" alt="calvao csv" width="80px" height="80px">
+                </div>
+                <div style="display: flex; flex-direction: column; margin-left: 5px;">
+                    <span>Minoxidil</span>
+                    <span>R$ 180,00</span>
+                </div>
+              </div>
+
             </div>
         </div>
 
