--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.scss
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.scss
@@ -26,12 +26,11 @@
 }
 
 .servicos, .produtos{
-display: flex;
-flex-direction: column;
+display: block;
 align-items: center;
 justify-content: center;
-width: 100%;
-margin-left: -20%;
+width: 60%;
+margin-left: 10%;
 overflow: auto;
 height: 200px;
 margin-top: 0;
