grade de itens selecionados

--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
@@ -1,6 +1,7 @@
 <div class="corpo">
+    <!-- Espaço do cadastro da venda -->
     <div class="detalhes">
-        <div class="venda" fxLayout="column" fxLayoutAlign="center start">
+        <div class="venda" fxLayout="column" fxLayoutAlign="start start">
             <h2>Detalhes da venda</h2>
             <div class="imputVenda">
                 <div>
@@ -63,94 +64,331 @@
                 </mat-form-field>
             </div>
             <div class="servicos" *ngIf="favoriteSeason === 'Serviços'">
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg" alt="calvao csv" width="80px" height="80px">
+                <div class="servico-coluna">
+                    <div>
+                        <img
+                            src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg"
+                            alt="calvao csv"
+                            width="80px"
+                            height="80px"
+                        />
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: 5px;
+                        "
+                    >
+                        <span>Corte Simples</span>
+                        <span>R$ 30,00</span>
+                    </div>
                 </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Corte Simples</span>
-                    <span>R$ 30,00</span>
-                </div>
-              </div>
 
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg" alt="calvao csv" width="80px" height="80px">
+                <div class="servico-coluna">
+                    <div>
+                        <img
+                            src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg"
+                            alt="calvao csv"
+                            width="80px"
+                            height="80px"
+                        />
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: 5px;
+                        "
+                    >
+                        <span>Corte Simples</span>
+                        <span>R$ 30,00</span>
+                    </div>
                 </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Corte Simples</span>
-                    <span>R$ 30,00</span>
-                </div>
-              </div>
 
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg" alt="calvao csv" width="80px" height="80px">
+                <div class="servico-coluna">
+                    <div>
+                        <img
+                            src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg"
+                            alt="calvao csv"
+                            width="80px"
+                            height="80px"
+                        />
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: 5px;
+                        "
+                    >
+                        <span>Corte Simples</span>
+                        <span>R$ 30,00</span>
+                    </div>
                 </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Corte Simples</span>
-                    <span>R$ 30,00</span>
-                </div>
-              </div>
 
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg" alt="calvao csv" width="80px" height="80px">
+                <div class="servico-coluna">
+                    <div>
+                        <img
+                            src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg"
+                            alt="calvao csv"
+                            width="80px"
+                            height="80px"
+                        />
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: 5px;
+                        "
+                    >
+                        <span>Corte Simples</span>
+                        <span>R$ 30,00</span>
+                    </div>
                 </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Corte Simples</span>
-                    <span>R$ 30,00</span>
-                </div>
-              </div>
-
             </div>
 
             <div class="servicos" *ngIf="favoriteSeason === 'Produtos'">
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp" alt="calvao csv" width="80px" height="80px">
+                <div class="servico-coluna">
+                    <div>
+                        <img
+                            src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp"
+                            alt="calvao csv"
+                            width="80px"
+                            height="80px"
+                        />
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: 5px;
+                        "
+                    >
+                        <span>Minoxidil</span>
+                        <span>R$ 180,00</span>
+                    </div>
                 </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Minoxidil</span>
-                    <span>R$ 180,00</span>
-                </div>
-              </div>
 
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp" alt="calvao csv" width="80px" height="80px">
+                <div class="servico-coluna">
+                    <div>
+                        <img
+                            src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp"
+                            alt="calvao csv"
+                            width="80px"
+                            height="80px"
+                        />
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: 5px;
+                        "
+                    >
+                        <span>Minoxidil</span>
+                        <span>R$ 180,00</span>
+                    </div>
                 </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Minoxidil</span>
-                    <span>R$ 180,00</span>
-                </div>
-              </div>
 
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp" alt="calvao csv" width="80px" height="80px">
+                <div class="servico-coluna">
+                    <div>
+                        <img
+                            src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp"
+                            alt="calvao csv"
+                            width="80px"
+                            height="80px"
+                        />
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: 5px;
+                        "
+                    >
+                        <span>Minoxidil</span>
+                        <span>R$ 180,00</span>
+                    </div>
                 </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Minoxidil</span>
-                    <span>R$ 180,00</span>
-                </div>
-              </div>
 
-              <div class="servico-coluna">
-                <div>
-                  <img src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp" alt="calvao csv" width="80px" height="80px">
+                <div class="servico-coluna">
+                    <div>
+                        <img
+                            src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp"
+                            alt="calvao csv"
+                            width="80px"
+                            height="80px"
+                        />
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: 5px;
+                        "
+                    >
+                        <span>Minoxidil</span>
+                        <span>R$ 180,00</span>
+                    </div>
                 </div>
-                <div style="display: flex; flex-direction: column; margin-left: 5px;">
-                    <span>Minoxidil</span>
-                    <span>R$ 180,00</span>
-                </div>
-              </div>
-
             </div>
         </div>
 
-        <div class="pagamento" fxLayout="column" fxLayoutAlign="center start">
+        <!-- Espaço para detalhes de pagamento -->
+        <div class="pagamento" fxLayout="column" fxLayoutAlign="start start">
             <h2>Detalhes do pagamento</h2>
+            <div class="selecionados-corpo">
+                <div class="span">
+                    <span class="span-limpo"></span>
+                    <span class="span-quantidade"
+                        ><strong>Quantidade</strong></span
+                    >
+                    <span class="span-valor"><strong>Valor</strong></span>
+                </div>
+                <div class="selecionados">
+                    <div class="dados">
+                        <div class="dado">
+                            <div class="dado1">
+                                <div>
+                                    <img
+                                        src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp"
+                                        alt="calvao csv"
+                                        width="80px"
+                                        height="80px"
+                                    />
+                                </div>
+                                <div
+                                    style="
+                                        display: flex;
+                                        flex-direction: column;
+                                        margin-left: 5px;
+                                        justify-content: center;
+                                    "
+                                >
+                                    <span>Minoxidil</span>
+                                    <span>R$ 180,00</span>
+                                </div>
+                            </div>
+                            <div class="dado2">
+                                <mat-form-field
+                                    style="width: 25%"
+                                    appearance="standart"
+                                >
+                                    <select matNativeControl required>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                    </select>
+                                </mat-form-field>
+                            </div>
+                            <div class="dado3">
+                                <span>R$ 180,00</span>
+                                <span>+ adicionar desconto</span>
+                            </div>
+                        </div>
+                        <div class="dado">
+                            <div class="dado1">
+                                <div>
+                                    <img
+                                        src="../../../../../assets/img/Screenshot_20220717-200405_Instagram.jpg"
+                                        alt="calvao csv"
+                                        width="80px"
+                                        height="80px"
+                                    />
+                                </div>
+                                <div
+                                    style="
+                                        display: flex;
+                                        flex-direction: column;
+                                        margin-left: 5px;
+                                    "
+                                >
+                                    <span>Corte Simples</span>
+                                    <span>R$ 30,00</span>
+                                </div>
+                            </div>
+                            <div class="dado2">
+                                <mat-form-field
+                                    style="width: 25%"
+                                    appearance="standart"
+                                >
+                                    <select matNativeControl required>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                    </select>
+                                </mat-form-field>
+                            </div>
+                            <div class="dado3">
+                                <span>R$ 180,00</span>
+                                <span>+ adicionar desconto</span>
+                            </div>
+                        </div>
+                        <div class="dado">
+                            <div class="dado1">
+                                <div>
+                                    <img
+                                        src="../../../../../assets/img/minoxidil-foligain-5-suprimento-para-3-meses-caixa-lacrada-62feb218e4796.webp"
+                                        alt="calvao csv"
+                                        width="80px"
+                                        height="80px"
+                                    />
+                                </div>
+                                <div
+                                    style="
+                                        display: flex;
+                                        flex-direction: column;
+                                        margin-left: 5px;
+                                        justify-content: center;
+                                    "
+                                >
+                                    <span>Minoxidil</span>
+                                    <span>R$ 180,00</span>
+                                </div>
+                            </div>
+                            <div class="dado2">
+                                <mat-form-field
+                                    style="width: 25%"
+                                    appearance="standart"
+                                >
+                                    <select matNativeControl required>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                    </select>
+                                </mat-form-field>
+                            </div>
+                            <div class="dado3">
+                                <span>R$ 180,00</span>
+                                <span>+ adicionar desconto</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
