--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.scss
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.scss
@@ -4,15 +4,21 @@
 }
 
 .venda {
-  width: 50%;
+  width: 40%;
+}
+
+.imputVenda{
+  width: 100%;
+  margin-top: 5%;
 }
 
 .imput {
-  min-width: 200%;
+  min-width: 100%;
 }
 
 .pagamento {
-  width: 50%;
+  width: 60%;
+  margin-left: 5%;
 }
 
 .radio {
@@ -21,8 +27,13 @@
   }
 }
 
+.col-md-4{
+width: 100%;
+}
+
 .pesquisar {
-  min-width: 230%;
+  min-width: 100%;
+  margin-top: 5%;
 }
 
 .servicos, .produtos{
@@ -30,7 +41,7 @@ display: block;
 align-items: center;
 justify-content: center;
 width: 60%;
-margin-left: 10%;
+margin-left: 15%;
 overflow: auto;
 height: 200px;
 margin-top: 0;
@@ -39,4 +50,65 @@ margin-top: 0;
   display: flex;
   flex-direction: row;
   padding-bottom: 20px;
+}
+
+.selecionados-corpo{
+  width: 100%;
+margin-top: 5%;
+}
+
+.selecionados{
+  width: 100%;
+  max-height: 200px;
+  overflow: auto;
+}
+
+.span{
+  display: flex;
+  flex-direction: row;
+  .span-limpo{
+    width: 50%;
+  }
+  .span-quantidade{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+  }
+  .span-valor{
+    width: 30%;
+    display: flex;
+    justify-content: end;
+  }
+}
+
+.dados{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.dado{
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 20px;
+  width: 100%;
+  .dado1{
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+  }
+  .dado2{
+    display: flex;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+  }
+  .dado3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    width: 30%;
+  }
+
 }
