corrigi o nome que envia o nome do estabelecimento para a sessao e fiz aparecer o nome do estabelecimento no dropdonw de usuario

--- a/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
+++ b/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
@@ -12,7 +12,7 @@
             >
                 <mat-icon [icIcon]="icPerson"></mat-icon>
             </div>
-            <div class="dropdown-heading">David Smith</div>
+            <div class="dropdown-heading">{{ nomeUsuario }}</div>
         </div>
 
         <button
