--- a/src/@vex/layout/toolbar/toolbar-user/toolbar-user.component.html
+++ b/src/@vex/layout/toolbar/toolbar-user/toolbar-user.component.html
@@ -6,7 +6,7 @@
     matRipple
 >
     <div class="body-1 font-medium leading-snug ltr:mr-3 rtl:ml-3" fxHide.xs>
-        David Smith
+        {{ nomeUsuario }}
     </div>
     <div
         class="rounded-full h-9 w-9 flex items-center justify-center text-primary bg-primary-light"
